Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
[drm] *ERROR* mismatch in eld buffer
http://intel-gfx-ci-public.igk.intel.com/archive/results/IGT/CI_DRM_12764/re-adlp-pub5/1/boot.log
<7>[ 17.757489] i915 0000:00:02.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:131:pipe B]
<7>[ 17.757827] i915 0000:00:02.0: [drm:intel_ddi_get_config [i915]] [ENCODER:267:DDI TC4/PHY TC4] Fec status: 0
<3>[ 17.757963] i915 0000:00:02.0: [drm] *ERROR* mismatch in eld buffer
<3>[ 17.757965] expected: 10 00 08 00 6c 14 00 01 00 00 00 00 00 00 00 00
<3>[ 17.757967] expected: 10 ac 47 41 44 45 4c 4c 20 55 50 33 32 31 38 4b
<3>[ 17.757968] expected: 09 1f 07
<3>[ 17.757969] found: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
<3>[ 17.757970] found: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
<3>[ 17.757971] found: 00 00 00
<4>[ 17.757972] ------------[ cut here ]------------
<4>[ 17.757973] pipe state doesn't match!
<4>[ 17.757990] WARNING: CPU: 2 PID: 142 at drivers/gpu/drm/i915/display/intel_modeset_verify.c:219 intel_modeset_verify_crtc+0x354/0x3a0 [i915]
<4>[ 17.758101] Modules linked in: i915 x86_pkg_temp_thermal coretemp kvm_intel kvm snd_hda_intel prime_numbers snd_intel_dspcfg i2c_algo_bit ttm snd_hda_codec mei_hdcp mei_pxp snd_hwdep drm_buddy e1000e irqbypass snd_hda_core smsc75xx video drm_display_helper crct10dif_pclmul mei_me usbnet ptp crc32_pclmul wmi_bmof mii ghash_clmulni_intel snd_pcm drm_kms_helper pps_core i2c_i801 syscopyarea mei intel_lpss_pci i2c_smbus sysfillrect sysimgblt wmi
<4>[ 17.758143] CPU: 2 PID: 142 Comm: kworker/u40:2 Not tainted 6.2.0-CI_DRM_12764-g524f0906b054+ #1
<4>[ 17.758145] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP5 RVP, BIOS ADLPFWI1.R00.2313.A00.2107301001 07/30/2021
<4>[ 17.758147] Workqueue: events_unbound async_run_entry_fn
<4>[ 17.758152] RIP: 0010:intel_modeset_verify_crtc+0x354/0x3a0 [i915]
<4>[ 17.758259] Code: ff ff 80 3d 46 26 2c 00 00 48 c7 c7 c8 c6 85 a0 75 3c e8 ff 7e 13 e1 41 0f b6 b4 24 50 01 00 00 e9 9c fd ff ff e8 28 21 55 e1 <0f> 0b e9 f5 fe ff ff e8 1c 21 55 e1 0f 0b 0f b6 44 24 17 e9 fb fd
<4>[ 17.758261] RSP: 0018:ffffc9000067f8f0 EFLAGS: 00010286
<4>[ 17.758263] RAX: 0000000000000000 RBX: ffff88811df68000 RCX: 0000000000000000
<4>[ 17.758264] RDX: 0000000000000001 RSI: ffffffff823d7f18 RDI: 00000000ffffffff
<4>[ 17.758266] RBP: ffff88812fbd2000 R08: 0000000000000001 R09: 0000000000000001
<4>[ 17.758267] R10: 0000000000000001 R11: ffff888102712900 R12: ffff8881306b2000
<4>[ 17.758268] R13: ffff8881124b1000 R14: ffff888130193800 R15: ffff88811df68848
<4>[ 17.758269] FS: 0000000000000000(0000) GS:ffff8882a6f00000(0000) knlGS:0000000000000000
<4>[ 17.758270] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 17.758272] CR2: 00007ffb6bceb000 CR3: 0000000006612005 CR4: 0000000000f70ee0
<4>[ 17.758273] PKRU: 55555554
<4>[ 17.758274] Call Trace:
<4>[ 17.758275] <TASK>
<4>[ 17.758281] intel_atomic_commit_tail+0x8ef/0xe30 [i915]
<4>[ 17.758416] ? intel_atomic_commit+0x380/0x400 [i915]
<4>[ 17.758535] ? intel_atomic_commit+0x33c/0x400 [i915]